# BizTracker-v1

./: .gitignore  PROJECT_DESCRIPTION.md  README.md  compose.yaml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: health.py  router.py
backend/app/bootstrap/: catalog_data.py  reference_data.py
backend/app/core/: auth.py  config.py  dependencies.py  security.py  weather_automation.py
backend/app/db/: base.py  mixins.py  models_registry.py  session.py
backend/app/shared/: README.md
backend/biztracker_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: REVISION_BACKLOG.md  env.py
backend/migrations/versions/: 20260422_001_create_schemas.py  20260422_002_auth_identity_base.py  20260422_003_core_master_data_foundation.py  20260422_004_core_category_product_base.py  20260422_005_ingest_imports_base.py  20260423_006_ingest_import_rows_parsing.py  20260423_007_core_financial_transaction_base.py  20260423_008_core_financial_tx_currency.py  20260423_009_core_inventory_item_base.py  20260423_010_core_inventory_item_name_unique.py  20260423_011_core_inventory_movement_base.py  20260423_012_core_inventory_movement_note.py  20260423_013_core_supplier_base.py  (+24 more)
backend/scripts/: __init__.py  backfill_import_weather.py  backup_database.py  bootstrap_reference_data.py  clean_demo_data.py  database_tools.py  install_weather_forecast_scheduler.ps1  install_weather_scheduler.ps1  recover_import_batch.py  restore_database.py  sync_weather.py  sync_weather_forecast.py  weather_sync_utils.py
backend/tests/: conftest.py
(+409 files in other folders)
